--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 <title>QuickML|个人中心</title>
+
 <link href="static/css/main.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="static/js/jquery.min.js"></script>
@@ -61,6 +62,32 @@
 
 <script type="text/javascript" src="static/js/charts/chart.js"></script>
 
+
+<script type="text/javascript">
+    function getCookie(name){
+        var strcookie = document.cookie; //获取cookie字符串
+        var arrcookie = strcookie.split("; "); //分割
+        //遍历匹配
+        for ( var i = 0; i < arrcookie.length; i++) {
+            var arr = arrcookie[i].split("=");
+            if (arr[0] == name){
+                console.log("get cookie");
+                return arr[1];
+            }
+        }
+        console.log("not get cookie");
+        return "";
+    }
+    
+    var username = getCookie("user");
+    
+    if(username == ""){
+        window.location.href = "login.html";
+    }
+</script>
+
+
+
 <!-- Shared on MafiaShare.net  --><!-- Shared on MafiaShare.net  --></head>
 
 <body>
@@ -81,9 +108,9 @@
 
     <!-- General balance widget -->
     <div class="genBalance">
-        <a href="#" title="" class="amount">
+        <a title="" class="amount">
             <span>欢迎:</span>
-            <span class="balanceAmount">USER ID</span>
+            <span id="username" class="balanceAmount"></span>
         </a>
         <a href="#" title="" class="amChanges">
             <div><img src="./static/images/sunny.png"></div>
@@ -120,7 +147,7 @@
                     <li><a href="#" title=""><img src="static/images/icons/topnav/profile.png" alt="" /><span>账户</span></a></li>
                     <li><a href="#" title=""><img src="static/images/icons/topnav/tasks.png" alt="" /><span>项目</span></a></li>
                     <li><a href="#" title=""><img src="static/images/icons/topnav/settings.png" alt="" /><span>设置</span></a></li>
-                    <li><a href="#" title=""><img src="static/images/icons/topnav/logout.png" alt="" /><span>退出</span></a></li>
+                    <li><a href="login.html" title=""><img src="static/images/icons/topnav/logout.png" alt="" /><span>退出</span></a></li>
                 </ul>
             </div>
             <div class="clear"></div>
@@ -148,8 +175,8 @@
     <div class="titleArea">
         <div class="wrapper">
             <div class="pageTitle">
-                <h1>User</h1>
-                <span>上午好！</span>
+                <h1 id="username1"></h1>
+                <span>您好！</span>
             </div>
             <div class="middleNav">
             </div>
@@ -174,14 +201,13 @@
             <thead>
             <tr>
             <th>项目名称</th>
-            <th>创建时间</th>
+            <th>运行时间</th>
             <th>模型</th>
             <th>精度</th>
             </tr>
             </thead>
-            <tbody>
-            </tr>
-            <tr class="gradeA">
+            <tbody id="projects">
+            <!--<tr class="gradeA">
             <td>项目1</td>
             <td>2021-01-01</td>
             <td>RF</td>
@@ -234,7 +260,7 @@
             <td>2021-01-09</td>
             <td>SVM</td>
             <td class="center">88.5%</td>
-            </tr>
+            </tr>-->
             </tbody>
             </table>  
         </div>
@@ -252,3 +278,33 @@
 
 </body>
 </html>
+
+<script type="text/javascript">
+    
+    x = document.getElementById("username");  // 找到元素
+    x.innerHTML = username;    // 改变内容
+
+    x = document.getElementById("username1");  // 找到元素
+    x.innerHTML = username;    // 改变内容
+    //获取用户项目
+    $.ajax({
+    type: "GET",
+    url: "/getUserTrains",
+    async: false,
+    dataType: "json",
+    success: function(data){
+        
+        var ProjectList = data.Projects;
+        for(i in Projects){
+            $("#projects").append(
+                '<tr class="gradeA">'
+                +'<td>'+ProjectList[i].trainID+'</td>'
+                +'<td>'+ProjectList[i].runningtime+'</td>'
+                +'<td>'+ProjectList[i].moduleID+'</td>'
+                +'<td>'+ProjectList[i].accuracy+'</td>'
+                +'</tr>'
+            );
+        };
+     }
+    });
+</script>
