--- a/templates/model_select.html
+++ b/templates/model_select.html
@@ -55,6 +55,27 @@
 
 <script type="text/javascript" src="static/js/custom.js"></script>
 
+<script type="text/javascript">
+    
+    function getCookie(name){
+        var strcookie = document.cookie; //获取cookie字符串
+        var arrcookie = strcookie.split("; "); //分割
+        //遍历匹配
+        for ( var i = 0; i < arrcookie.length; i++) {
+            var arr = arrcookie[i].split("=");
+            if (arr[0] == name){
+                return arr[1];
+            }
+        }
+        return "";
+    }
+    var username = getCookie("user");
+    if(username == ""){
+        window.location.href = "login.html";
+    }
+</script>
+
+
 <!-- Shared on MafiaShare.net  --><!-- Shared on MafiaShare.net  --></head>
 
 <body>
@@ -77,7 +98,7 @@
     <div class="genBalance">
         <a href="#" title="" class="amount">
             <span>欢迎:</span>
-            <span class="balanceAmount">USER ID</span>
+            <span id="username" class="balanceAmount"></span>
         </a>
         <a href="#" title="" class="amChanges">
             <div><img src="./static/images/sunny.png"></div>
@@ -113,7 +134,7 @@
                     <li><a href="#" title=""><img src="static/images/icons/topnav/profile.png" alt="" /><span>账户</span></a></li>
                     <li><a href="#" title=""><img src="static/images/icons/topnav/tasks.png" alt="" /><span>项目</span></a></li>
                     <li><a href="#" title=""><img src="static/images/icons/topnav/settings.png" alt="" /><span>设置</span></a></li>
-                    <li><a href="#" title=""><img src="static/images/icons/topnav/logout.png" alt="" /><span>退出</span></a></li>
+                    <li><a href="login.html" title=""><img src="static/images/icons/topnav/logout.png" alt="" /><span>退出</span></a></li>
                 </ul>
             </div>
             <div class="clear"></div>
@@ -157,13 +178,13 @@
     <div class="wrapper">
     
         <!-- Note -->
-        <div class="nNote nInformation">
-            <p><strong>提示: </strong>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</a></p>
-        </div>
+<!--        <div class="nNote nInformation">-->
+<!--            <p><strong>提示: </strong>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</a></p>-->
+<!--        </div>-->
         
         <!-- Form -->
         <form class="form">
-            <!--选择已有数据-->
+            <!--选择已有数据
             <fieldset>
                 <div class="widget">
                     <div class="title"><img src="static/images/icons/dark/record.png" alt="" class="titleIcon" /><h6>选择您刚才上传的数据：</h6><div class="num"></div>
@@ -190,14 +211,14 @@
                                             </div>
                                     </li>
                                     </div>
-                                    <!--<input type="checkbox" name="check3" disabled="disabled" checked="checked" id="check3" /><label for="check3" class="disabled">Disabled checked</label>
-                                    <input type="checkbox" name="check4" disabled="disabled" id="check4" class="disabled" /><label for="check4" class="disabled">Disabled unchecked</label>-->
+                                    <input type="checkbox" name="check3" disabled="disabled" checked="checked" id="check3" /><label for="check3" class="disabled">Disabled checked</label>
+                                    <input type="checkbox" name="check4" disabled="disabled" id="check4" class="disabled" /><label for="check4" class="disabled">Disabled unchecked</label>
                                 </ul>
                              </div>
                         <div class="clear"></div>
                     </div>
                 </div>
-            </fieldset>
+            </fieldset>-->
 
             <fieldset>
                 <div class="widget">
@@ -205,24 +226,11 @@
                     <div class="body">
                     <div class="leftPart">
                         <div class="filter"><span>查找: </span><input type="text" id="box1Filter" class="boxFilter" /><input type="button" id="box1Clear" class="fBtn" value="x" /><div class="clear"></div></div>
-                        
+
                         <select id="box1View" multiple="multiple" class="multiple" style="height:320px;">
-                            <option value="100" disabled="" class="model_label">分类</option>
-                            <option value="101" class="model_name">朴素贝叶斯</option>
-                            <option value="102" class="model_name">决策树</option>
-                            <option value="103" class="model_name">支持向量机</option>
-                            <option value="104" class="model_name">神经网络</option>
-                            <option value="200" disabled="" class="model_label">回归</option>
-                            <option value="201" class="model_name">线性回归</option>
-                            <option value="202" class="model_name">逻辑回归</option>
-                            <option value="203" class="model_name">决策树</option>
-                            <option value="204" class="model_name">支持向量机</option>
-                            <option value="205" class="model_name">神经网络</option>
-                            <option value="300" disabled="" class="model_label">聚类</option>
-                            <option value="301" class="model_name">K均值聚类(K-means)</option>
-                            <option value="400" disabled="" class="model_label">评估方法</option>
-                            <option value="401" class="model_name">ROC曲线</option>
-                            <option value="402" class="model_name">混淆矩阵</option>
+                            {% for model in Ms %}
+                            <option value={{ model.MODULEID }} class="model_name">{{ model.TYPENAME }}  {{ model.NAME }}</option>
+                            {% endfor %}
                         </select>
                         <br/>
                         <span id="box1Counter" class="countLabel"></span>
@@ -247,7 +255,11 @@
                     </div>
                 </div>
             </fieldset>
-            <div class="formSubmit"><input id="btn" type="button" value="开始训练" class="redB"></div>
+
+            <div class="formSubmit">
+                <input id="pca" type="checkbox" value="pca" checked="checked" />降维
+                <input id="btn" type="button" value="开始训练" class="redB">
+            </div>
         </form>
             
     </div>
@@ -265,9 +277,10 @@
 </html>
 
 <script type="text/javascript">
-        //checkfile = $("input[type=checkbox][class='checkfile']");
-        //var childs = $("#childs");
-        //console.log(checkfile);
+   
+    x = document.getElementById("username");  // 找到元素
+    x.innerHTML = username;    // 改变内容
+        
     $(function(){
         $('#btn').click(function(){
             var models = new Array;
@@ -277,16 +290,31 @@
                 models.push(val);
             });
             //console.log(models);
-            $.ajax({
-            url: '/runmodel',
-            data: {"models": models},
-            type: 'POST',
-            traditional: true,
-            success: function(data){
-                alert(data);
+            
+            if(models.length != 0){
+                if($('#pca').is(':checked')){
+                    pca = true;
+                }
+                else{
+                    pca = false;
+                }
+                $.ajax({
+                    url: '/runmodel',
+                    data: {"models": models, "pca": pca},
+                    type: 'POST',
+                    traditional: true,
+                    success: function(data){
+                        //alert(data);
+                    },
+                    error: function(data) {
+                        //alert(data);
+                    }
+                });
+                window.location.href="trained_result.html";
             }
-            });
-            window.location.href="trained_result.html";
+            else{
+                alert('请至少选择一个模型');
+            }
         });
     });
 
