--- a/templates/trained_result.html
+++ b/templates/trained_result.html
@@ -2,64 +2,84 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-    <title>QuickML|训练结果</title>
-    <link href="static/css/main.css" rel="stylesheet" type="text/css"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+<title>QuickML|训练结果</title>
+<link href="static/css/main.css" rel="stylesheet" type="text/css"/>
 
-    <script type="text/javascript" src="static/js/jquery.min.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/spinner/ui.spinner.js"></script>
-    <script type="text/javascript" src="static/js/plugins/spinner/jquery.mousewheel.js"></script>
-
-    <script type="text/javascript" src="static/js/jquery-ui.min.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/charts/excanvas.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/charts/jquery.sparkline.min.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/forms/uniform.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/jquery.cleditor.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/jquery.validationEngine-en.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/jquery.validationEngine.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/jquery.tagsinput.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/autogrowtextarea.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/jquery.maskedinput.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/jquery.dualListBox.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/jquery.inputlimiter.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/forms/chosen.jquery.min.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/wizard/jquery.form.js"></script>
-    <script type="text/javascript" src="static/js/plugins/wizard/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/wizard/jquery.form.wizard.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/uploader/plupload.js"></script>
-    <script type="text/javascript" src="static/js/plugins/uploader/plupload.html5.js"></script>
-    <script type="text/javascript" src="static/js/plugins/uploader/plupload.html4.js"></script>
-    <script type="text/javascript" src="static/js/plugins/uploader/jquery.plupload.queue.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/tables/datatable.js"></script>
-    <script type="text/javascript" src="static/js/plugins/tables/tablesort.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/tables/resizable.min.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.tipsy.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.collapsible.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.progress.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.timeentry.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.colorpicker.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.jgrowl.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.breadcrumbs.js"></script>
-    <script type="text/javascript" src="static/js/plugins/ui/jquery.sourcerer.js"></script>
-
-    <script type="text/javascript" src="static/js/plugins/calendar.min.js"></script>
-    <script type="text/javascript" src="static/js/plugins/elfinder.min.js"></script>
-
-    <script type="text/javascript" src="static/js/custom.js"></script>
+<script type="text/javascript" src="static/js/jquery.min.js"></script>
 
 
+<script type="text/javascript" src="static/js/plugins/spinner/ui.spinner.js"></script>
+<script type="text/javascript" src="static/js/plugins/spinner/jquery.mousewheel.js"></script>
+
+<script type="text/javascript" src="static/js/jquery-ui.min.js"></script>
+
+<script type="text/javascript" src="static/js/plugins/charts/excanvas.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/charts/jquery.sparkline.min.js"></script>
+
+<script type="text/javascript" src="static/js/plugins/forms/uniform.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/jquery.cleditor.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/jquery.validationEngine-en.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/jquery.validationEngine.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/jquery.tagsinput.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/autogrowtextarea.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/jquery.maskedinput.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/jquery.dualListBox.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/jquery.inputlimiter.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/forms/chosen.jquery.min.js"></script>
+
+<script type="text/javascript" src="static/js/plugins/wizard/jquery.form.js"></script>
+<script type="text/javascript" src="static/js/plugins/wizard/jquery.validate.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/wizard/jquery.form.wizard.js"></script>
+
+<script type="text/javascript" src="static/js/plugins/uploader/plupload.js"></script>
+<script type="text/javascript" src="static/js/plugins/uploader/plupload.html5.js"></script>
+<script type="text/javascript" src="static/js/plugins/uploader/plupload.html4.js"></script>
+<script type="text/javascript" src="static/js/plugins/uploader/jquery.plupload.queue.js"></script>
+
+<script type="text/javascript" src="static/js/plugins/tables/datatable.js"></script>
+<script type="text/javascript" src="static/js/plugins/tables/tablesort.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/tables/resizable.min.js"></script>
+
+<script type="text/javascript" src="static/js/plugins/ui/jquery.tipsy.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.collapsible.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.prettyPhoto.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.progress.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.timeentry.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.colorpicker.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.jgrowl.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.breadcrumbs.js"></script>
+<script type="text/javascript" src="static/js/plugins/ui/jquery.sourcerer.js"></script>
+
+<script type="text/javascript" src="static/js/plugins/calendar.min.js"></script>
+<script type="text/javascript" src="static/js/plugins/elfinder.min.js"></script>
+
+<script type="text/javascript" src="static/js/custom.js"></script>
 
 
-    <!-- Shared on MafiaShare.net  --><!-- Shared on MafiaShare.net  --></head>
+<script type="text/javascript">
+    function getCookie(name){
+        var strcookie = document.cookie; //获取cookie字符串
+        var arrcookie = strcookie.split("; "); //分割
+        //遍历匹配
+        for ( var i = 0; i < arrcookie.length; i++) {
+            var arr = arrcookie[i].split("=");
+            if (arr[0] == name){
+                return arr[1];
+            }
+        }
+        return "";
+    }
+    var username = getCookie("user");
+    if(username == ""){
+        window.location.href = "login.html";
+    }
+</script>
+
+
+
+<!-- Shared on MafiaShare.net  --><!-- Shared on MafiaShare.net  --></head>
 
 <body>
 
@@ -81,7 +101,7 @@
     <div class="genBalance">
         <a href="#" title="" class="amount">
             <span>欢迎:</span>
-            <span class="balanceAmount">USER ID</span>
+            <span id="username" class="balanceAmount"></span>
         </a>
         <a href="#" title="" class="amChanges">
             <div><img src="./static/images/sunny.png"></div>
@@ -120,7 +140,7 @@
                     </li>
                     <li><a href="#" title=""><img src="static/images/icons/topnav/settings.png" alt=""/><span>设置</span></a>
                     </li>
-                    <li><a href="#" title=""><img src="static/images/icons/topnav/logout.png"
+                    <li><a href="login.html" title=""><img src="static/images/icons/topnav/logout.png"
                                                   alt=""/><span>退出</span></a></li>
                 </ul>
             </div>
@@ -278,6 +298,8 @@
 
 
 <script type="text/javascript">
+    x = document.getElementById("username");  // 找到元素
+    x.innerHTML = username;    // 改变内容
 
 	var count = 0;
 	var myTimer = setInterval("getResult()", 1000);
@@ -296,7 +318,7 @@
          				"<tr class='gradeA'><td class='center'>"+values[0]+"</td>"
          				+"<td class='center'>"+values[1]+"</td>"
          				+"<td class='center'>"+values[2]+"</td>"
-         				+"<td class='center'><a href="+values[3]+">"+"项目名—"+values[0]+"</a></td></tr>"
+         				+"<td class='center'><a href="+values[3]+" target='_blank'>"+"项目名—"+values[0]+"</a></td></tr>"
 	                );
        				count = count + 1;
       			};
