--- a/templates/upload_data.html
+++ b/templates/upload_data.html
@@ -55,6 +55,27 @@
 
 <script type="text/javascript" src="static/js/custom.js"></script>
 
+
+<script type="text/javascript">
+    function getCookie(name){
+        var strcookie = document.cookie; //获取cookie字符串
+        var arrcookie = strcookie.split("; "); //分割
+        //遍历匹配
+        for ( var i = 0; i < arrcookie.length; i++) {
+            var arr = arrcookie[i].split("=");
+            if (arr[0] == name){
+                return arr[1];
+            }
+        }
+        return "";
+    }
+    var username = getCookie("user");
+    if(username == ""){
+        window.location.href = "login.html";
+    }
+</script>
+
+
 <!-- Shared on MafiaShare.net  --><!-- Shared on MafiaShare.net  --></head>
 
 <body>
@@ -76,7 +97,7 @@
     <div class="genBalance">
         <a href="#" title="" class="amount">
             <span>欢迎:</span>
-            <span class="balanceAmount">USER ID</span>
+            <span id="username" class="balanceAmount"></span>
         </a>
         <a href="#" title="" class="amChanges">
             <div><img src="./static/images/sunny.png"></div>
@@ -110,7 +131,7 @@
                     <li><a href="#" title=""><img src="static/images/icons/topnav/profile.png" alt="" /><span>账户</span></a></li>
                     <li><a href="#" title=""><img src="static/images/icons/topnav/tasks.png" alt="" /><span>项目</span></a></li>
                     <li><a href="#" title=""><img src="static/images/icons/topnav/settings.png" alt="" /><span>设置</span></a></li>
-                    <li><a href="#" title=""><img src="static/images/icons/topnav/logout.png" alt="" /><span>退出</span></a></li>
+                    <li><a href="login.html" title=""><img src="static/images/icons/topnav/logout.png" alt="" /><span>退出</span></a></li>
                 </ul>
             </div>
             <div class="clear"></div>
@@ -178,5 +199,8 @@
 </html>
 
 <script type="text/javascript">
+
+    x = document.getElementById("username");  // 找到元素
+    x.innerHTML = username;    // 改变内容
 
 </script>
